--- a/src/app/pages/emoployee/emoployee.component.html
+++ b/src/app/pages/emoployee/emoployee.component.html
@@ -45,8 +45,12 @@
             </div>
             <div class="col-md-6">
                 <label for="role" class="form-label">Role</label>
-                <input type="text" class="form-control" [(ngModel)]="employeeObj.role" name="role"
-                    placeholder="Enter Role">
+                <select type="text" class="form-select" name="role" [(ngModel)]="employeeObj.role">
+                    <option selected>Select Role</option>
+                    @for (item of designations(); track $index) {
+                    <option [value]="item">{{item}}</option>
+                    }
+                </select>
             </div>
         </div>
         <div class="row">
@@ -56,33 +60,33 @@
                     (change)="onParentDepartmentChange()">
                     <option selected>Select Parent Department</option>
                     @for (item of parentDepartmentList(); track $index) {
-                    <option [value]="item.departmentId">{{item.departmentName}}</option>
+                    <option [value]="item.id">{{item.departmentName}}</option>
                     }
                 </select>
             </div>
             <div class="col-md-6">
                 <label for="childDepartment" class="form-label">Child Department</label>
-                <select type="text" class="form-select" [(ngModel)]="employeeObj.deptId" name="deptId">
+                <select type="text" class="form-select" [(ngModel)]="employeeObj.departmentId" name="deptId">
                     <option selected> Select Child Department</option>
                     @for (item of childDepartmentList(); track $index) {
-                    <option [value]="item.childDeptId">{{item.departmentName}}</option>
+                    <option [value]="item.id">{{item.departmentName}}</option>
                     }
                 </select>
             </div>
         </div>
         <button type="button" class="btn btn-success mt-3" (click)="onSave()"> Submit </button>
-        <button type="button" class="btn btn-outline-secondary mt-3 ms-3" (click)="isFormVisible.set(false)"> Cancel
-        </button>
+        <button type="button" class="btn btn-outline-secondary mt-3 ms-3" (click)="isFormVisible.set(false)"> Cancel</button>
     </form>
     }
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>Emp Id</th>
                 <th>Name</th>
                 <th>Contact No</th>
                 <th>Email</th>
                 <th>Department</th>
+                <th>Project</th>
                 <th>Role</th>
                 <th>Gender</th>
                 <th>Actions</th>
@@ -91,11 +95,12 @@
         <tbody>
             @for (item of employeeList(); track $index) {
             <tr>
-                <td>{{$index+1}}</td>
+                <td>{{item.employeeId}}</td>
                 <td>{{item.employeeName}}</td>
                 <td>{{item.contactNo}}</td>
                 <td>{{item.emailId}}</td>
-                <td>{{item.deptId}}</td>
+                <td>{{item.departmentName}}</td>
+                <td>{{item.projectName}}</td>
                 <td>{{item.role}}</td>
                 <td>{{item.gender}}</td>
                 <td>
