--- a/src/app/pages/dasboard/dasboard.component.html
+++ b/src/app/pages/dasboard/dasboard.component.html
@@ -1,1 +1,31 @@
-<p>dasboard works!</p>
+<div class="tab-pane fade show active" id="employees" role="tabpanel">
+    <div class="row">
+        <div class="col-6">
+            <h2>Dashboard</h2>
+        </div>
+    </div>
+
+     <div class="row">
+        <div class="col-4">
+            <span class="h5">Total Employees: {{totalEmployees}}</span>
+        </div>
+        <div class="col-4">
+            <span class="h5">Total Projects: {{totalProjects}}</span>
+        </div>
+        <div class="col-4">
+            <span class="h5">Total Departments: {{totalDepartments}}</span>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-4">
+            <span class="h5">Latest Employees: </span>
+        </div>
+        <div class="col-4">
+            <span class="h5">Trending Projects</span>
+        </div>
+        <div class="col-4">
+            <span class="h5">Recent Assignments</span>
+        </div>
+    </div>
+</div>
