--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,10 +1,11 @@
 <div class="mb-4">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
     <a class="navbar-brand ms-3" href="#">CompanyPortal</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
@@ -17,10 +18,13 @@
           <a class="nav-link" routerLink="/project">Project</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/project-employee">Project</a>
-          </li>
+          <a class="nav-link" routerLink="/department">Department</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/project-employee">Project-Employee</a>
+        </li>
       </ul>
-      <form class="my-2 my-lg-0 ms-auto">        
+      <form class="my-2 my-lg-0 ms-auto">
         <button class="btn btn-outline-success my-2 my-sm-0 me-3" type="button" (click)="logout()">Logout</button>
       </form>
     </div>
@@ -28,5 +32,5 @@
 </div>
 
 <div class="container">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
